--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@nextui-org/react": "^1.0.2-beta.3",
     "axios": "^0.25.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "sweetalert2": "^11.3.10"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^1.0.7",
